Provide selector for case sensitive/insensitive message search

--- a/org/kde/kjournald/CMakeLists.txt
+++ b/org/kde/kjournald/CMakeLists.txt
@@ -55,6 +55,8 @@ target_sources(kjournald PRIVATE
     localjournal.cpp
     localjournal.h
     localjournal_p.h
+    logentry.cpp
+    logentry.h
     journaldexportreader.cpp
     journaldexportreader.h
     journaldhelper.cpp
