cmake: Restore setting the VERSION and SOVERSION for libkjournald
This is a library installed into the public library path, and technically
it still has the ability to be linked to when the experimental devel files
are shipped, so put this back for now.

--- a/org/kde/kjournald/CMakeLists.txt
+++ b/org/kde/kjournald/CMakeLists.txt
@@ -94,6 +94,12 @@ ecm_finalize_qml_module(kjournald DESTINATION ${KDE_INSTALL_QMLDIR})
 #    QT_QMLCACHEGEN_ARGUMENTS "--verbose"
 #)
 
+set_target_properties(kjournald PROPERTIES
+    VERSION ${KJOURNALD_VERSION}
+    SOVERSION ${KJOURNALD_SOVERSION}
+    EXPORT_NAME KJournald
+)
+
 install(TARGETS kjournald
     EXPORT KJournaldTargets
     DESTINATION ${KDE_INSTALL_LIBDIR})
