Port to QML Singleton for KI18n to fix qmllint errors
Change all ki18n(c) method calls to KI18n.i18n(c) method calls to have
qmlls access to the correctly registered method. This fixes most of the
remaining "Unqualified access" qmllint errors.
Note that the new singleton is only available in Ki18n of at least
version KF 6.21.0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ include(FeatureSummary)
 include(GenerateExportHeader)
 include(CMakePackageConfigHelpers)
 
-set(KF_VERSION 6.8.0)
+set(KF_VERSION 6.21.0)
 find_package(ECM ${KF_VERSION} NO_MODULE)
 set_package_properties(ECM PROPERTIES
     TYPE REQUIRED
@@ -75,6 +75,7 @@ find_package(Qt6 6.5.0 REQUIRED COMPONENTS
     Test
     Widgets
 )
+qt_policy(SET QTP0005 NEW)
 
 option(INSTALL_EXPERIMENTAL_HEADERS "Install headers for libkjournald (no stable API yet)" OFF)
 
