--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,4 @@ include:
       - /gitlab-templates/linux-qt6-next.yml
       - /gitlab-templates/flatpak.yml
       - /gitlab-templates/cppcheck.yml
+      - /gitlab-templates/snap-snapcraft-lxd.yml
